Update code for Accessibility

--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -63,10 +63,12 @@
                     <p><span class="required">*</span> indicates a required field.</p>
 
                     <div class="form-group">
-                        <select name="contactType" id="contactType" class="form-control">
-                            <option value="Enquiry" selected>Enquiry</option>
-                            <option value="Message">Message</option>
-                        </select>
+                        <label for="contactType" id="contactTypeLabel">
+                            <select name="contactType" id="contactType" class="form-control">
+                                <option value="Enquiry" selected>Enquiry</option>
+                                <option value="Message">Message</option>
+                            </select>
+                        </label>
                     </div>
 
                     <div class="form-group" id="emailGroup">
