--- a/public/view/help.html
+++ b/public/view/help.html
@@ -54,42 +54,45 @@
 
             <div class="container">
 
-            <h1>Help</h1>
+                <header>
+                    <h1>Help</h1>
+                </header>
 
-            <div class="page-header">
-                <h3>On Start Page.</h3>
+                <div class="page-header">
+                    <h2>On Start Page.</h2>
+                </div>
+
+                <p>You must do the following to chat to another user. </p>
+
+                <p>These two first in any order.</p>
+
+                <ol>
+                    <li>Choose whether you are a Supporter or you want Support</li>
+                    <li>Select what you want to talk about</li>
+                </ol>
+
+                <p>Then click <button class="btn btn-primary">Start Chatting</button> to Find a Match and Start Chatting.</p>
+
+                <div class="page-header">
+                    <h2>On Chat Page.</h2>
+                </div>
+
+                <p>When matched with a user you can do the following in any order.</p>
+
+                <ul>
+                    <li class="form-inline">You can Type into  <label id="messageLabel" for="message">Your Text Message</label> <input placeholder="e.g. hello :)..." class="form-control" id="message"/> and Send a text Message by pressing Enter or <button class="btn btn-default">Send</button>.</li>
+                    <li>You can Skip the matched user by clicking on <button class="btn btn-danger">Skip User</button>.</li>
+                    <li>You can Report the matched user by clicking on <button class="btn btn-warning">Report User</button>.</li>
+                    <li>You can invite the other user to a game, to choose a game click <button type="button" class="btn btn-default">
+                        🎮
+                    </button> then click on your chosen game by clicking on choosing game button like <button type="button" class="btn btn-default">
+                        🎮
+                    </button>.</li>
+                </ul>
+
+                <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can change your preferences and match with another user to start chatting again.</p>
+
             </div>
-
-            <p>You must do the following to chat to another user. </p>
-
-            <p>These two first in any order.</p>
-
-            <ol>
-                <li>Choose whether you are a Supporter or you want Support</li>
-                <li>Select what you want to talk about</li>
-            </ol>
-
-            <p>Then click <button class="btn btn-primary">Start Chatting</button> to Find a Match and Start Chatting.</p>
-
-            <div class="page-header">
-                <h3>On Chat Page.</h3>
-            </div>
-
-            <p>When matched with a user you can do the following in any order.</p>
-
-            <ul>
-                <li class="form-inline">You can Type into <input placeholder="e.g. hello :)..." class="form-control"/> and Send a text Message by pressing Enter or <button class="btn btn-default">Send</button>.</li>
-                <li>You can Skip the matched user by clicking on <button class="btn btn-danger">Skip User</button>.</li>
-                <li>You can Report the matched user by clicking on <button class="btn btn-warning">Report User</button>.</li>
-                <li>You can invite the other user to a game, to choose a game click <button type="button" class="btn btn-default">
-                    🎮
-                </button> then click on your chosen game by clicking on choosing game button like <button type="button" class="btn btn-default">
-                    🎮
-                </button>.</li>
-            </ul>
-
-            <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can change your preferences and match with another user to start chatting again.</p>
-                
         </div>
         <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
