--- a/public/lib/contact.css
+++ b/public/lib/contact.css
@@ -39,6 +39,10 @@
     font-weight: 700;
 }
 
+#contactTypeLabel {
+    display: block;
+}
+
 @media only screen and (min-width: 481px) {
 
     #contactForm {
