--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -1,7 +1,7 @@
 .container {
-    margin: auto;
-    max-width: 100%;
-}
+     margin: auto;
+     max-width: 100%;
+ }
 
 #logo {
     -moz-transition: all .3s ease-in-out;
@@ -21,5 +21,9 @@
 }
 
 #languageLabel {
+    display: none;
+}
+
+#messageLabel {
     display: none;
 }
