confirmation before leaving, skipping, reporting.

--- a/public/lib/chat.css
+++ b/public/lib/chat.css
@@ -135,3 +135,26 @@ legend {
     margin: 5px 0;
     padding: 5px;
 }
+
+#confirmationContainerContainer {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    text-align: center;
+    opacity: 0;
+    z-index: -1000;
+}
+
+#confirmationContainer {
+    display: inline-block;
+}
+
+#confirmationButtons button {
+    margin-left: 5px;
+}
