Add A Text Chat Page Link.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -30,9 +30,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand active" id="logoContainer" href="/" onclick="return getConfirmation(this);"><img id="logo" src="images/logo.png"
+
+                    <a class="navbar-brand" id="logoContainer" href="/" onclick="return getConfirmation(this);"><img id="logo" src="images/logo.png"
                                                                                     alt="Logo for Buddy Support"
-                                                                                    style="opacity:1;"> </a>
+                                                                                    style="opacity:1;"></a>
+                    <a class="navbar-brand" href="/" onclick="return getConfirmation(this);">Chat</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
