--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -30,7 +30,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand active" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support"> </a>
+                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support"> </a>
+                    <a class="navbar-brand" href="/" >Chat</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
