--- a/public/view/help.html
+++ b/public/view/help.html
@@ -29,6 +29,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support"> </a>
+                    <a class="navbar-brand" href="/">Chat</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
