Shows how many new messages in title & notification

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -55,7 +55,7 @@
         <div id="notificationsContainer">
             <div class="container">
                 <div id="notifications">
-                    <p id="newMessage" class="notification alert alert-info btn btn-info" role="alert">New Message <i class="fa fa-arrow-down" aria-hidden="true"></i></p>
+                    <p id="newMessage" class="notification alert alert-info btn btn-info" role="alert"></p>
                     <p id="userTyping" class="notification alert alert-info" role="alert">User is typing...</p>
                     <p id="error" class="notification alert alert-danger" role="alert"></p>
                 </div>
