Add icons to button.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -92,8 +92,8 @@
 
         <div id="chatButtons">
             <div class="container">
-                <button id="skipButton" class="btn btn-danger">Skip User</button>
-                <button id="reportButton" class="btn btn-warning">Report User</button>
+                <button id="skipButton" class="btn btn-danger"><span class="glyphicon glyphicon-ban-circle" aria-hidden="true"></span> Skip User</button>
+                <button id="reportButton" class="btn btn-warning"><span class="glyphicon glyphicon-flag" aria-hidden="true"></span> Report User</button>
             </div>
         </div>
 
