--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -123,10 +123,19 @@
                             <label for="anything"><input type="checkbox" name="topic" value="Anything" checked id="anything">Anything</label>
                         </div>
                         <div class="checkbox">
-                            <label for="topic1"><input type="checkbox" name="topic" value="Topic 1" id="topic1">Topic 1</label>
+                            <label for="loneliness"><input type="checkbox" name="topic" value="Loneliness" id="loneliness">Loneliness</label>
                         </div>
                         <div class="checkbox">
-                            <label for="topic2"><input type="checkbox" name="topic" value="Topic 2" id="topic2">Topic 2</label>
+                            <label for="stress"><input type="checkbox" name="topic" value="Stress" id="stress">Stress</label>
+                        </div>
+                        <div class="checkbox">
+                            <label for="unhappiness"><input type="checkbox" name="topic" value="Unhappiness" id="unhappiness">Unhappiness</label>
+                        </div>
+                        <div class="checkbox">
+                            <label for="feelings of anxiety"><input type="checkbox" name="topic" value="Feelings of Anxiety" id="feelings of anxiety">Feelings of Anxiety</label>
+                        </div>
+                        <div class="checkbox">
+                            <label for="isolation"><input type="checkbox" name="topic" value="Isolation" id="isolation">Isolation</label>
                         </div>
                     </fieldset>
 
