--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -138,7 +138,9 @@
                             <label for="isolation"><input type="checkbox" name="topic" value="Isolation" id="isolation">Isolation</label>
                         </div>
                     </fieldset>
-
+                    <div id="preferencesFeedbackContainer">
+                        <p id="preferencesFeedback" class="alert alert-danger"></p>
+                    </div>
                     <button id="startButton" class="btn btn-primary" autofocus>Start Chatting</button>
                 </form>
 
@@ -174,8 +176,6 @@
         <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="lib/helperFunctions.js"></script>
-
         <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
         <script type="text/javascript" src="lib/chat.js"></script>
     </body>
