--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -150,7 +150,9 @@
                         <div class="panel-heading" id="feedback"></div>
                     </div>
 
-                    <p id="motivationalMessage"></p>
+                    <div id="motivationalMessageContainer" class="panel panel-success">
+                        <div class="panel-heading" id="motivationalMessage"></div>
+                    </div>
 
                 </div>
 
