Fix minor errors.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -8,12 +8,12 @@
         <meta name="description" content="">
         <meta name="keywords" content="">
         <!-- Bootstrap stylesheet-->
-        <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="lib/main.css" />
-        <link rel="stylesheet" href="lib/chat.css" />
-        <link rel="icon" href="images/logo.png">
+        <link rel="stylesheet" href="/lib/main.css" />
+        <link rel="stylesheet" href="/lib/chat.css" />
+        <link rel="icon" href="/images/logo.png">
         <title>Chat | Buddy Support</title>
     </head>
 
@@ -31,7 +31,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" id="logoContainer" href="/" onclick="return getConfirmation(this);"><img id="logo" src="images/logo.png"
+                    <a class="navbar-brand" id="logoContainer" href="/" onclick="return getConfirmation(this);"><img id="logo" src="/images/logo.png"
                                                                                     alt="Logo for Buddy Support"
                                                                                     style="opacity:1;"></a>
                     <a class="navbar-brand" href="/" onclick="return getConfirmation(this);">Chat</a>
@@ -168,17 +168,17 @@
         </div>
 
         <audio id="notificationSound">
-            <source src="sound/notification.wav" type="audio/wav">
-            <source src="sound/notification.mp3" type="audio/mp3">
-            <source src="sound/notification.ogg" type="audio/ogg">
+            <source src="/sound/notification.wav" type="audio/wav">
+            <source src="/sound/notification.mp3" type="audio/mp3">
+            <source src="/sound/notification.ogg" type="audio/ogg">
                 Your browser does not support the audio element.
         </audio>
 
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-        <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="/lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
-        <script type="text/javascript" src="lib/chat.js"></script>
+        <script type="text/javascript" src="/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/lib/fixedFooterHeader.js"></script>
+        <script type="text/javascript" src="/lib/chat.js"></script>
     </body>
 </html>
