--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -8,12 +8,12 @@
         <meta name="description" content="">
         <meta name="keywords" content="">
         <!-- Bootstrap stylesheet-->
-        <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="lib/main.css"/>
-        <link rel="stylesheet" href="lib/contact.css" />
-        <link rel="icon" href="images/logo.png">
+        <link rel="stylesheet" href="/lib/main.css"/>
+        <link rel="stylesheet" href="/lib/contact.css" />
+        <link rel="icon" href="/images/logo.png">
         <title>Contact Buddy Support</title>
     </head>
 
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support"> </a>
+                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="/images/logo.png" alt="Logo for Buddy Support"> </a>
                     <a class="navbar-brand" href="/" >Chat</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
@@ -100,10 +100,10 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="/lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="lib/contactForm.js"></script>
-        <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
+        <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/lib/contactForm.js"></script>
+        <script type="text/javascript" src="/lib/fixedFooterHeader.js"></script>
     </body>
 </html>
