--- a/public/view/help.html
+++ b/public/view/help.html
@@ -7,11 +7,11 @@
         <meta name="description" content="">
         <meta name="keywords" content="">
         <!-- Bootstrap stylesheet-->
-        <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="lib/main.css"/>
-        <link rel="stylesheet" href="lib/help.css" />
-        <link rel="icon" href="images/logo.png">
+        <link rel="stylesheet" href="/lib/main.css"/>
+        <link rel="stylesheet" href="/lib/help.css" />
+        <link rel="icon" href="/images/logo.png">
         <title>Help - Buddy Support</title>
     </head>
 
@@ -28,7 +28,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support"> </a>
+                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="/images/logo.png" alt="Logo for Buddy Support"> </a>
                     <a class="navbar-brand" href="/">Chat</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
@@ -95,9 +95,9 @@
 
             </div>
         </div>
-        <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="/lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
+        <script type="text/javascript" src="/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/lib/fixedFooterHeader.js"></script>
     </body>
 </html>
