--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -60,16 +60,17 @@
 
                     <h2>Contact Us - Form</h2>
 
-                    <p>Use this contact form for any enquiries or to give us any feedback quickly, or you can send your enquiries or messages to <a href="mailto:up733474@myport.ac.uk" target="_blank">up733474@myport.ac.uk</a>.</p>
+                    <p>Use this contact form for any enquiries or to give us any feedback quickly, or you can send your
+                        enquiries or messages to <a href="mailto:up733474@myport.ac.uk" target="_blank">up733474@myport.ac.uk</a>.
+                    </p>
                     <p><span class="required">*</span> indicates a required field.</p>
 
                     <div class="form-group">
-                        <label for="contactType" id="contactTypeLabel">
-                            <select name="contactType" id="contactType" class="form-control">
-                                <option value="Enquiry" selected>Enquiry</option>
-                                <option value="Message">Message</option>
-                            </select>
-                        </label>
+                        <label for="contactType">Select the type of message to send.</label>
+                        <select name="contactType" id="contactType" class="form-control">
+                            <option value="Enquiry" selected>Enquiry</option>
+                            <option value="Message">Message</option>
+                        </select>
                     </div>
 
                     <div class="form-group" id="emailGroup">
