--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -1,7 +1,7 @@
 .container {
-     margin: auto;
-     max-width: 100%;
- }
+    margin: auto;
+    max-width: 100%;
+}
 
 #logo {
     -moz-transition: all .3s ease-in-out;
@@ -26,4 +26,39 @@
 
 #messageLabel {
     display: none;
+}
+
+.navbar-toggle.collapsed .icon-bar:nth-of-type(2) {
+    top: initial;
+    transform: rotate(0deg);
+}
+
+.navbar-toggle.collapsed .icon-bar:nth-of-type(3) {
+    top: 1px;
+    transform: rotate(0deg);
+    background-color: #888;
+}
+
+.navbar-toggle.collapsed .icon-bar:nth-of-type(4) {
+    top: 2px;
+    transform: rotate(0deg);
+}
+
+.navbar-toggle .icon-bar {
+    transition: all 500ms ease-in-out;
+    position: relative;
+}
+
+.navbar-toggle .icon-bar:nth-of-type(2) {
+    top: 6px;
+    transform: rotate(45deg);
+}
+
+.navbar-toggle .icon-bar:nth-of-type(3) {
+    background-color: transparent;
+}
+
+.navbar-toggle .icon-bar:nth-of-type(4) {
+    top: -6px;
+    transform: rotate(-45deg);
 }
