--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -29,12 +29,19 @@
 }
 
 .navbar-toggle .icon-bar {
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    -o-transition: all 500ms ease-in-out;
     transition: all 500ms ease-in-out;
     position: relative;
 }
 
 .navbar-toggle.collapsed .icon-bar:nth-of-type(2) {
     top: 0;
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
     transform: rotate(0deg);
 }
 
@@ -44,11 +51,19 @@
 
 .navbar-toggle.collapsed .icon-bar:nth-of-type(4) {
     top: 0;
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
     transform: rotate(0deg);
 }
 
 .navbar-toggle .icon-bar:nth-of-type(2) {
     top: 6px;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
     transform: rotate(45deg);
 }
 
@@ -58,5 +73,9 @@
 
 .navbar-toggle .icon-bar:nth-of-type(4) {
     top: -6px;
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
 }
