--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -31,16 +31,16 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" id="logoContainer" href="/" onclick="return getConfirmation(this);"><img
+                    <a class="navbar-brand" id="logoContainer" href="/" onclick="return getConfirmationToLeave(this);"><img
                             id="logo" src="/images/logo.png"
                             alt="Logo for Buddy Support"
                             style="opacity:1;"></a>
-                    <a class="navbar-brand" href="/" onclick="return getConfirmation(this);">Chat</a>
+                    <a class="navbar-brand" href="/" onclick="return getConfirmationToLeave(this);">Chat</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/contact" onclick="return getConfirmation(this);">Contact</a></li>
-                        <li><a href="/help" onclick="return getConfirmation(this);">Help</a></li>
+                        <li><a href="/contact" onclick="return getConfirmationToLeave(this);">Contact</a></li>
+                        <li><a href="/help" onclick="return getConfirmationToLeave(this);">Help</a></li>
                     </ul>
                     <form class="navbar-form navbar-right">
                         <div class="form-group">
@@ -57,7 +57,8 @@
             <div class="container">
                 <div id="notifications">
                     <p id="newMessage" class="notification alert alert-info btn btn-info" role="alert"></p>
-                    <p id="userTyping" class="notification alert alert-info" role="alert">User is typing...</p>
+                    <p id="userTyping" class="notification alert alert-info" role="alert">User is typing<img
+                            src="/images/user-typing.gif" id="userTypingGif"></p>
                     <p id="error" class="notification alert alert-danger" role="alert"></p>
                 </div>
             </div>
@@ -84,8 +85,8 @@
                     <label id="messageLabel" for="message">Your Text Message</label>
                     <input id="message" placeholder="hello :)..." class="form-control" />
                     <span class="input-group-btn">
-                                    <button class="btn btn-default" type="submit">Send</button>
-                                </span>
+                                        <button class="btn btn-default" type="submit">Send</button>
+                                    </span>
                 </form><!-- /input-group -->
 
             </div>
