--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -30,12 +30,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="/images/logo.png" alt="Logo for Buddy Support"> </a>
-                    <a class="navbar-brand" href="/" >Chat</a>
+                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="/images/logo.png"
+                                                                             alt="Logo for Buddy Support"> </a>
+                    <a class="navbar-brand" href="/">Chat</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a  href="/contact">Contact</a></li>
+                        <li class="active"><a href="/contact">Contact</a></li>
                         <li><a href="/help">Help</a></li>
                     </ul>
                     <form class="navbar-form navbar-right">
@@ -75,25 +76,31 @@
 
                     <div class="form-group" id="emailGroup">
                         <label for="emailInput">Your Email Address <span class="required">*</span></label>
-                        <input type="email" name="emailInput" placeholder="e.g. joe@example.com" required tabindex="1" id="emailInput"
+                        <input type="email" name="emailInput" placeholder="e.g. joe@example.com" required tabindex="1"
+                               id="emailInput"
                                title="Email Address" oninput="validateEmail(this.value)" class="form-control input">
                         <p id="emailFeedback"></p>
                     </div>
 
                     <div class="form-group">
                         <label for="subjectInput">The Message Subject</label>
-                        <input type="text" name="subjectInput" placeholder="e.g. App Feedback" tabindex="2" id="subjectInput"
+                        <input type="text" name="subjectInput" placeholder="e.g. App Feedback" tabindex="2"
+                               id="subjectInput"
                                title="Subject of Message" class="form-control input">
                     </div>
 
                     <div class="form-group">
                         <label for="messageInput">Your Message <span class="required">*</span></label>
-                        <textarea name="messageInput" placeholder="e.g. Your app could do with more colour." required tabindex="3" id="messageInput"
-                                  title="The Message" oninput="validateMessage(this.value)" class="form-control input"></textarea>
+                        <textarea name="messageInput" placeholder="e.g. Your app could do with more colour." required
+                                  tabindex="3" id="messageInput"
+                                  title="The Message" oninput="validateMessage(this.value)"
+                                  class="form-control input"></textarea>
                         <p id="messageFeedback"></p>
                     </div>
 
-                    <button id="submit" type="submit" class="btn btn-success" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Sending">Send</button>
+                    <button id="submit" type="submit" class="btn btn-success"
+                            data-loading-text="<i class='fa fa-spinner fa-spin '></i> Sending">Send
+                    </button>
 
                     <p id="feedback"></p>
 
