--- a/public/view/help.html
+++ b/public/view/help.html
@@ -28,13 +28,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="/images/logo.png" alt="Logo for Buddy Support"> </a>
+                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="/images/logo.png"
+                                                                             alt="Logo for Buddy Support"> </a>
                     <a class="navbar-brand" href="/">Chat</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/contact">Contact</a></li>
-                        <li class="active"><a href="/help" >Help</a></li>
+                        <li class="active"><a href="/help">Help</a></li>
                     </ul>
                     <form class="navbar-form navbar-right">
                         <div class="form-group">
@@ -72,7 +73,10 @@
                     <li>Select what you want to talk about</li>
                 </ol>
 
-                <p>Then click <button class="btn btn-primary">Start Chatting</button> to Find a Match and Start Chatting.</p>
+                <p>Then click
+                    <button class="btn btn-primary">Start Chatting</button>
+                    to Find a Match and Start Chatting.
+                </p>
 
                 <div class="page-header">
                     <h2>On Chat Page.</h2>
@@ -81,17 +85,34 @@
                 <p>When matched with a user you can do the following in any order.</p>
 
                 <ul>
-                    <li class="form-inline">You can Type into  <label id="messageLabel" for="message">Your Text Message</label> <input placeholder="e.g. hello :)..." class="form-control" id="message"/> and Send a text Message by pressing Enter or <button class="btn btn-default">Send</button>.</li>
-                    <li>You can Skip the matched user by clicking on <button class="btn btn-danger">Skip User</button>.</li>
-                    <li>You can Report the matched user by clicking on <button class="btn btn-warning">Report User</button>.</li>
-                    <li>You can invite the other user to a game, to choose a game click <button type="button" class="btn btn-default">
-                        🎮
-                    </button> then click on your chosen game by clicking on choosing game button like <button type="button" class="btn btn-default">
-                        🎮
-                    </button>.</li>
+                    <li class="form-inline">You can Type into <label id="messageLabel" for="message">Your Text
+                        Message</label> <input placeholder="e.g. hello :)..." class="form-control" id="message" /> and Send
+                        a text Message by pressing Enter or
+                        <button class="btn btn-default">Send</button>
+                        .
+                    </li>
+                    <li>You can Skip the matched user by clicking on
+                        <button class="btn btn-danger">Skip User</button>
+                        .
+                    </li>
+                    <li>You can Report the matched user by clicking on
+                        <button class="btn btn-warning">Report User</button>
+                        .
+                    </li>
+                    <li>You can invite the other user to a game, to choose a game click
+                        <button type="button" class="btn btn-default">
+                            🎮
+                        </button>
+                        then click on your chosen game by clicking on choosing game button like
+                        <button type="button" class="btn btn-default">
+                            🎮
+                        </button>
+                        .
+                    </li>
                 </ul>
 
-                <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can change your preferences and match with another user to start chatting again.</p>
+                <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can
+                    change your preferences and match with another user to start chatting again.</p>
 
             </div>
         </div>
